--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -1,48 +1,23 @@
-name: Molecule CI
+name: Molecule
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, main ]
   pull_request:
-  workflow_dispatch:
 
 jobs:
-  lint:
-    name: Ansible Lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-          cache: "pip"
-          cache-dependency-path: requirements.txt
-
-      - name: Install ansible-lint
-        run: |
-          python -m pip install --upgrade pip
-          pip install ansible ansible-lint
-
-      # On ignore la règle 'role-name' pour éviter l’erreur FQCN historique
-      - name: Run ansible-lint
-        run: ansible-lint -x role-name
-
   molecule:
-    name: Molecule • ${{ matrix.label }}
+    name: Molecule (${{ matrix.label }})
     runs-on: ubuntu-latest
-    needs: lint
     strategy:
       fail-fast: false
       matrix:
         include:
-          - label: ubuntu-22.04
+          - label: ubuntu2204
             image: geerlingguy/docker-ubuntu2204-ansible
-          - label: debian-12
+          - label: debian12
             image: geerlingguy/docker-debian12-ansible
-          - label: rockylinux-8
+          - label: rockylinux8
             image: geerlingguy/docker-rockylinux8-ansible
 
     steps:
@@ -52,23 +27,15 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
-          cache: "pip"
+          python-version: "3.10"   # pas de cache pip pour éviter l’erreur de fichier manquant
 
-      - name: Install toolchain (Molecule + Docker driver)
+      - name: Install Molecule toolchain
         run: |
           python -m pip install --upgrade pip
-          pip install \
-            "molecule>=6" \
-            "molecule-plugins[docker]" \
-            ansible \
-            docker
+          pip install molecule "molecule-plugins[docker]" ansible docker
 
-      - name: Show versions
-        run: |
-          ansible --version
-          molecule --version
-          docker --version
+      - name: Docker info (debug)
+        run: docker info
 
       - name: Run Molecule tests
         env:
